Fix bug rendering issues on Firefox

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,5 +1,9 @@
 @use "../abstracts/" as *;
 
+html {
+  scrollbar-width: thin;
+}
+
 :is(a, button, input, textarea, select, details, summary, div, label) {
   &:focus-visible {
     outline: black dotted 0.19rem;
